# tf-keras-image-classifier

./: README.md  eval.py  requirements.txt  train.py
classifier/: data.py  model.py
common/: callbacks.py  data_utils.py  model_utils.py  preprocess_crop.py  utils.py
common/backbones/: ghostnet.py  mobilenet_v3.py  mobilevit.py  peleenet.py  simple_cnn.py  squeezenet.py
configs/: carpet_classes.txt  floor_classes.txt
inference/MNN/: CMakeLists.txt  classifier.cpp
inference/MNN/configs/: quantizeConfig.json
tools/: heatmap_check.py  objects365_to_pascal_voc.py  txt_roi_extract.py  voc_floor_extract.py
tools/dataset_converter/: gray_conv.py  imdb_wiki_convert.py  objects365_to_pascal_voc.py  roi_extract.py  txt_roi_extract.py  voc_floor_extract.py  voc_roi_extract.py
tools/evaluation/: convkernel_check.py  featuremap_check.py  heatmap_check.py  validate_classifier.py
tools/model_converter/: keras_to_onnx.py  keras_to_tensorflow.py  tensorflow_to_rknn.py
torch/: README.md  eval.py  requirements.txt  train.py
torch/classifier/: data.py  model.py
torch/common/: data_utils.py  model_utils.py  utils.py
torch/common/backbones/: csppeleenet.py  ghostnet.py  ghostnet_2.py  hbonet.py  mobilenetv2.py  mobilenetv3.py  mobilevit.py  peleenet.py  simple_cnn.py
torch/inference/MNN/: CMakeLists.txt  classifier.cpp
torch/inference/MNN/configs/: quantizeConfig.json
torch/inference/Tengine/: CMakeLists.txt  classifier.cpp
torch/tools/: export.py  heatmap_check.py  model_statistics.py
torch/tools/evaluation/: heatmap_check.py  model_statistics.py  validate_classifier.py  validate_classifier_tensorrt.py
torch/tools/evaluation/triton_inference/: classifier_client.py  model_dump.py  server_docker_install.sh
torch/tools/evaluation/triton_inference/classifier_onnx/: config.pbtxt
torch/tools/evaluation/triton_inference/cpp_client/: README.md
torch/tools/evaluation/triton_inference/cpp_client/grpc/: CMakeLists.txt  classifier_grpc_client.cpp
torch/tools/model_converter/: export.py  onnx_quant_convert.py  onnx_to_rknn.py  onnx_to_tensorrt.py  torch_quant_convert.py
torch/triton_deployment/: README.md  classifier_client.py  imagenet_model_dump.py  model_dump.py  pipeline_client.py  preprocess_client.py  server_docker_install.sh  wenet_server_docker_install.sh
torch/triton_deployment/cpp_client/: README.md
torch/triton_deployment/cpp_client/grpc/: CMakeLists.txt  classifier_grpc_client.cpp  pipeline_grpc_client.cpp
torch/triton_deployment/cpp_client/http/: CMakeLists.txt  classifier_http_client.cpp  pipeline_http_client.cpp
torch/triton_deployment/funasr/: funasr_client.py  funasr_paraformer_server_docker_install.sh
torch/triton_deployment/model_repository/classifier_onnx/: config.pbtxt
torch/triton_deployment/model_repository/classifier_pipeline/: config.pbtxt
torch/triton_deployment/model_repository/classifier_pipeline_bls_sync/: config.pbtxt
torch/triton_deployment/model_repository/classifier_pipeline_bls_sync/1/: model.py
torch/triton_deployment/model_repository/classifier_preprocess/: config.pbtxt
torch/triton_deployment/model_repository/classifier_preprocess/1/: model.py
torch/triton_deployment/python_client/: classifier_client.py  pipeline_bls_sync_client.py  pipeline_client.py  preprocess_client.py  requirements.txt  wenet_asr_client.py
torch/triton_deployment/wenet/: plot_train_curve.py  wenet_asr_client.py  wenet_server_docker_install.sh  wenet_train_guide.sh
